<resources>
    <string name="app_name">Tree App</string>
    <string name="ahorn_tree">Ahorn</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="leaf_icon" translatable="false">Leaf Icon</string>
    <string name="heart_icon" translatable="false">Heart Icon</string>
    <string name="please_select">Bitte auswählen</string>
    <string name="bottom_app_bar_overview">Übersicht</string>
    <string name="bottom_app_bar_tree_selection">Bäume</string>
    <string name="overview_fragment_headline">Deine Waldübersicht</string>
    <string name="overview_fragment_description_text">Klicke auf einen Baum, um mehr über ihn zu erfahren!</string>
    <string name="overview_single_tree_placeholder_text">overview_single_tree_text</string>
    <string name="overview_single_tree_state_image_content_description">overview_single_tree_state_image</string>
    <string name="overview_single_tree_image_content_description">overview_single_tree_image</string>
    <string name="detail_single_tree_profile_button_text">Steckbrief</string>
    <string name="detail_single_tree_leaf_button_content_description">leaf games button</string>
    <string name="detail_single_tree_fruit_button_content_description">fruit games button</string>
    <string name="detail_single_tree_trunk_button_content_description">trunk games button</string>
    <string name="detail_single_tree_other_button_content_description">other games button</string>
    <string name="game_selection_title">Minispiele</string>
    <string name="game_selection_headline_placeholder">Wähle ein Spiel aus</string>
    <string name="game_selection_description_trunk">Hier findest du Minigames zu Rinde und Holz %1$s. Starte jetzt mit einem Spiel!</string>
    <string name="game_selection_description_fruit">Hier findest du Minigames zu Blüte und Frucht %1$s. Starte jetzt mit einem Spiel!</string>
    <string name="game_selection_description_leaf">Hier findest du Minigames zu Blatt und Zweig %1$s. Starte jetzt mit einem Spiel!</string>
    <string name="game_selection_description_other">Hier findest du allgemeine Minigames %1$s. Starte jetzt mit einem Spiel!</string>
    <string name="game_mode_multiplayer">Mehrspieler</string>
    <string name="game_mode_multiplayer_button_description">Mulitplayer Modus</string>
    <string name="game_mode_singleplayer">Einzelspieler</string>
    <string name="game_mode_singleplayer_button_description">Singleplayer Modus</string>
    <string name="game_mode_player">%1$s : %2$d</string>
    <string name="game_mode_multiplayer_next_player">%1$s ist an der Reihe</string>
    <string name="game_mode_player_won">%1$s hat gewonnen.</string>
    <string name="game_mode_draw">Untentschieden!</string>
    <string name="game_difficulty_select_text">Wie schwierig soll es sein?</string>
    <string name="game_difficulty_easy">Lieber was einfaches</string>
    <string name="game_difficulty_medium">Ganz normal</string>
    <string name="game_difficulty_hard">Ich mag eine Herausforderung</string>
    <string name="game_description_placeholder">Spiel-Beschreibung</string>
    <string name="game_send_button_placeholder_text">Fertig!</string>
    <string name="game_score_comparison">%1$d / %2$d</string>
    <string name="game_new_highscore">Neuer Highscore!</string>
    <string name="game_no_highscore">Kein neuer Highscore!</string>
    <string name="game_your_score">Deine Punktzahl</string>
    <string name="game_your_highscore">Dein Highscore</string>
    <string name="game_have_fun">Viel Spaß!</string>
    <string name="game_btn_start">Start</string>
    <string name="game_prompt_second_player_name">Mit wem spielst du heute? Bitte gib den Namen ein!</string>
    <string name="game_edit_text_name">Name</string>
    <string name="game_first_player_default">Spieler A</string>
    <string name="game_second_player_default">Spieler B</string>
    <string name="game_catchFruits_trees_description_text">Weißt du noch, wie die Blätter und Früchte %1$s aussehen?</string>
    <string name="game_catchFruits_instruction_1">Versuche, 10 Blätter und 10 Früchte durch Klicken einzusammeln, bevor die Zeit abläuft.</string>
    <string name="game_catchFruits_instruction_2">Wenn du auf falsche Blätter oder Früchte klickst oder ein richtiges Blatt/ eine richtige Frucht verpasst, ist das Spiel schneller vorbei.</string>
    <string name="game_choose_answer_option_button_placeholder_text">Answer Button</string>
    <string name="menu_imprint">Impressum</string>
    <string name="imprint_imprint_title">Impressum</string>
    <string name="imprint_imprint_text">Informationen gemäß § 5 Telemediengesetz: </string>
    <string name="imprint_publisher_title">Herausgeber</string>
    <string name="imprint_publisher_text">Prof. Birgit J. Neuhaus \nLudwig-Maximilians-Universität München \nDidaktik der Biologie \nWinzererstr. 45/II, 80797 München \nE-Mail: didaktik.biologie@lrz.uni-muenchen.de \n
    \nProf. Dr. Heinrich Hußmann \nLudwig-Maximilians-Universität München \nInstitut für Informatik</string>
    <string name="imprint_tec_implementation_title">Verantwortlich für die technische Umsetzung</string>
    <string name="imprint_tec_implementation_text">Studierende der LMU. Mehr Informationen unter \"Über uns\".</string>
    <string name="imprint_disclaimer_title">Freistellungserklärung</string>
    <string name="imprint_disclaimer_text">Die Angaben wurden nach bestem Wissen erstellt, Fehler können jedoch nicht mit letzter Sicherheit ausgeschlossen werden. Eine Gewähr für die jederzeitige Aktualität, Richtigkeit, Vollständigkeit und Verfügbarkeit der bereitgestellten Informationen können wir nicht übernehmen.
    Wir haften nicht für Schäden, die durch die Nutzung dieses Appangebots entstehen. Für etwaige Schäden, die beim Aufrufen oder Herunterladen von Daten durch Schadsoftware oder der Installation oder Nutzung von Software verursacht werden, wird nicht gehaftet.</string>
    <string name="imprint_copyright_title">Copyright / Urheberrecht</string>
    <string name="imprint_copyright_text">Die Inhalte dieser App unterliegen dem Urheberrecht der Beitragenden. Die Lizenzverträge zur Einräumung von Nutzungsrechten gegenüber den Urheberrechten Dritter können im Menüpunkt \"Lizenzen\" eingesehen werden. Sofern nicht anders angegeben unterstehen sämtliche Inhalte der MIT-Lizenz.\n
    \nSollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen. </string>
    <string name="imprint_links_title">Haftung für Links</string>
    <string name="imprint_links_text">Die App enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Daher können wir für diese auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</string>
    <string name="menu_privacy">Datenschutz</string>
    <string name="menu_about_us">Über uns</string>
    <string name="about_us_title">Über uns</string>
    <string name="creation">Entstehung</string>
    <string name="goal">Über die App</string>
    <string name="powered_by">Ermöglicht durch</string>
    <string name="about_intention_text">Der digitale Baumlehrpfad „App ins Grüne“ soll Kindern (und Erwachsenen) die heimischen Bäume auf spielerische Art näherbringen. Im Vordergrund steht dabei das Smartphone als Begleiter in der Natur: Viele Minispiele in der App erfordern die Interaktion mit der Umgebung, z.B. das Fotografieren der Blätter der Bäume. In den jeweiligen Steckbriefen können die Fotos zu jeder Zeit noch einmal betrachtet werden. Mit der Möglichkeit, eine eigene Sammlung zusammenzustellen, wollen wir nicht nur interaktives Lernen fördern, sondern auch einen Mehrwert bieten, denn die eigenen Fotos sind doch etwas Besonderes!</string>
    <string name="about_text">Wie unsere heimischen Bäume war auch „App ins Grüne“ am Anfang ein kleiner Sprössling – gepflanzt von BISA „Biodiversität im Schulalltag“. Thomas Gerl, Lehrer und Mitglied bei BISA und des Lehrstuhls Didaktik der Biologie an der LMU brachte den Sprössling im Sommersemester 2019 zu einem interdisziplinären Workshop an der LMU, bei dem sich Studenten der kleinen Pflanze annahmen. Hier wurden zum Beispiel das Konzept der App und einiger Minispiele entwickelt und erste Illustrationen von den Bäumen, Blättern, Früchten und Baumstämmen angefertigt. Daraus entstand ein erster Prototyp!</string>
    <string name="about_text2">Und es ging noch weiter! Im den nachfolgenden Monaten haben sich drei Studenten aus dem Workshop bereit erklärt, sich um den jungen Baum zu kümmern. „App ins Grüne“ entwickelte sich langsam, aber stetig zu einer ersten Version der App, die bereits viele Features wie die Spielesammlung oder die Steckbriefe zu den Baumarten enthielt. Und auch ein Eichhörnchen fand den Weg in unsere App und wurde zum Maskottchen. Thomas Gerl stand dabei für Fragen und Verbesserungsvorschläge immer zur Seite.</string>
    <string name="about_text3">Nun war unser Sprössling inzwischen schon recht groß geworden, aber noch keine ausgewachsene Pflanze. Im Wintersemester 2020/21 entstand an der LMU ein Gruppenpraktikum, bei dem auch neue Studenten hinzukamen und das Projekt fortführten. Mit einer Teamgröße von 13 Studenten und einer agilen Entwicklungsweise machte die App nun große Sprünge: Vorhandene Spiele wurden überarbeitet und neue entwickelt, ein Nutzerprofil wurde eingebaut und die Steckbriefe bekamen ein völlig neues Aussehen mit vielen Interaktionsmöglichkeiten.</string>
    <string name="about_text4">Mit viel Engagement und Liebe zum Detail wurde aus dem Sprössling ein ausgewachsener Baum – „App ins Grüne“. An dieser Stelle wollen wir uns herzlich für die tatkräftige Unterstützung bei Thomas Gerl bedanken.</string>
    <string name="about_subtitle_devs">Technische Umsetzung:</string>
    <string name="about_subtitle_devs2">Projektkoordination</string>
    <string name="about_subtitle_devs3">Entwicklung</string>
    <string name="about_subtitle_devs4">Design</string>
    <string name="about_subtitle_devs5">Texte</string>
    <string name="about_text_devs2">Lisa Görtz</string>
    <string name="about_text_devs3">Alexander Zwermann \nAugust Oberhauser \nBenedikt Strodl \nCarmen Golling \nCoco Rogers \nDaniel Steidl \nDavid Klein \nDominik Runge \nHanna Daxer \nJulia Pühl \nLisa Görtz \nMagdalena Benkard \nSophia Münch \nSvenja König \nStefan Körner \nYannick Weiss</string>
    <string name="about_text_devs4">Cara Emberger \nCarmen Golling \nFabienne Daniela Lengweiler \nFlorentine Helmle \nJulian Lorenz \nMaya Czupor \nThomas Gerl \nThomas Puls</string>
    <string name="about_text_devs5">Florentine Helmle \nLisa Görtz \nMarie Irmer \nThomas Gerl</string>
    <string name="about_open_source_subtitle">Open Source</string>
    <string name="about_open_source_text">Ihr könnt den Quelltext der App einsehen und selbst verwenden. Außerdem freuen wir uns über Verbesserungen und Beiträge auf GitHub: https://github.com/lmu-informatics/app-ins-gruene</string>
    <string name="splash_screen_image_appinsgruene" translatable="false">image_appinsgruene</string>
    <string name="splash_screen_image_logos" translatable="false">image_logos</string>
    <string name="splash_screen_text">entstanden in Zusammenarbeit mit:</string>
    <string name="profile_edit">Profil ändern</string>
    <string name="profile_create">Profil erstellen</string>
</resources>