<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile_edit"
        android:icon="@drawable/ic_baseline_edit"
        android:title="@string/profile_edit"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_add"
        android:icon="@drawable/ic_baseline_add"
        android:title="@string/profile_create"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open_imprint"
        android:title="@string/menu_imprint" />
    <item
        android:id="@+id/open_privacy"
        android:title="@string/menu_privacy" />
    <item
        android:id="@+id/open_about"
        android:title="@string/menu_about_us" />
</menu>
