<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_appinsgruene"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/splash_screen_image_appinsgruene"
        app:layout_constraintBottom_toTopOf="@+id/splash_screen_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_appinsgruene" />

    <ImageView
        android:id="@+id/image_logos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/splash_screen_image_logos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_screen_text"
        app:srcCompat="@drawable/ic_logos" />

    <TextView
        android:id="@+id/splash_screen_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splash_screen_text"
        android:gravity="center"
        android:text="@string/splash_screen_text"
        android:textSize="@dimen/heading2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_logos"
        app:layout_constraintTop_toBottomOf="@+id/image_appinsgruene" />

</androidx.constraintlayout.widget.ConstraintLayout>