<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/overview_single_tree_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/overview_single_tree_image_content_description"
        android:clickable="true"
        android:focusable="true"
        app:layout_constrainedHeight="false"
        app:layout_constraintBottom_toTopOf="@+id/overview_single_tree_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_local_florist_white_24dp" />

    <TextView
        android:id="@+id/overview_single_tree_text"
        android:layout_width="211dp"
        android:layout_height="26dp"
        android:text="@string/overview_single_tree_placeholder_text"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_single_tree_image" />

    <ImageView
        android:id="@+id/overview_single_tree_state_image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/overview_single_tree_state_image_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/checkbox_on_background" />
</androidx.constraintlayout.widget.ConstraintLayout>